# EduSync-AD

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: guide_utilisateur.md
exemples/: creation_comptes.csv  departs.csv  migration_comptes.csv  reinitialisation_mdp.csv
packaging/: edusync_ad.spec  installer.iss  org.edusync.AD.desktop  org.edusync.AD.metainfo.xml  org.edusync.AD.yml  version_info.txt
resources/csv_examples/: creation_comptes_exemple.csv
src/edusync_ad/: __main__.py  app.py
src/edusync_ad/core/: audit.py  config.py  crypto.py  csv_io.py  export.py  identifiers.py  models.py  password_vault.py  passwords.py  updater.py
src/edusync_ad/core/ad/: connection.py  exceptions.py
src/edusync_ad/ui/: audit_page.py  debug_console.py  log_manager.py  log_view_widget.py  login_dialog.py  main_window.py  progress_dialog.py  progress_panel.py  settings_page.py  theme.py  update_dialog.py
src/edusync_ad/ui/modules/: ad_explorer_page.py  create_accounts_page.py  depart_page.py  export_page.py  inscription_page.py  migration_page.py  password_reset_page.py
tests/core/: test_ad_connection.py  test_ad_explorer.py  test_audit.py  test_config.py  test_crypto.py  test_csv_io.py  test_depart_ad.py  test_export.py  test_identifiers.py  test_inscription.py  test_migration_ad.py  test_password_reset_ad.py  test_password_reset_csv.py  test_password_vault.py  test_passwords.py  test_updater.py
tools/: generate_icon.py
